--- a/TodoList/TodoList/Components/Pages/Home.razor
+++ b/TodoList/TodoList/Components/Pages/Home.razor
@@ -1,7 +1,21 @@
 ﻿@page "/"
+@using TodoList.Data
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<Card>
+    <CardBody>
+        <CardTitle Size="3">
+            Card title
+        </CardTitle>
+        <CardText>
+            This is some text within a card body. Jelly lemon drops tiramisu chocolate cake cotton candy soufflé oat cake sweet roll. Sugar plum marzipan dragée topping cheesecake chocolate bar. Danish muffin icing donut.
+        </CardText>
+    </CardBody>
+</Card>
+
+<Posts></Posts>
