--- a/TodoList/TodoList/Components/Pages/Home.razor
+++ b/TodoList/TodoList/Components/Pages/Home.razor
@@ -1,21 +1,13 @@
 ﻿@page "/"
-@using TodoList.Data
+@attribute [StreamRendering(true)]
+@using TodoList.Components.Components
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Todos</PageTitle>
 
-<h1>Hello, world!</h1>
+<TodosGrid/>
 
-Welcome to your new app.
+<AddTodoModal />
 
-<Card>
-    <CardBody>
-        <CardTitle Size="3">
-            Card title
-        </CardTitle>
-        <CardText>
-            This is some text within a card body. Jelly lemon drops tiramisu chocolate cake cotton candy soufflé oat cake sweet roll. Sugar plum marzipan dragée topping cheesecake chocolate bar. Danish muffin icing donut.
-        </CardText>
-    </CardBody>
-</Card>
+@code {
 
-<Posts></Posts>
+}
